--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
                 0 30px 60px -12px rgba(0, 0, 0, 0.5),
                 inset 0 1px 1px 0 rgba(255, 255, 255, 0.1);
             transition: all 0.6s cubic-bezier(0.16, 1, 0.3, 1);
-            /* Removed overflow:hidden to prevent button cutting */
         }
 
         .liquid-glass::before {
@@ -81,16 +80,10 @@
             border-radius: 2.5rem 2.5rem 0 0;
         }
 
-        .liquid-glass:hover {
-            border-color: rgba(255, 255, 255, 0.4);
-            background: rgba(255, 255, 255, 0.07);
-            transform: scale(1.01) translateY(-10px);
-        }
-
         .nav-glass {
-            background: rgba(2, 4, 10, 0.3);
-            backdrop-filter: blur(25px) saturate(150%);
-            border-bottom: 1px solid rgba(255, 255, 255, 0.08);
+            background: rgba(2, 4, 10, 0.4);
+            backdrop-filter: blur(30px) saturate(180%);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
         }
 
         .hero-title {
@@ -126,12 +119,18 @@
             top: 0;
             left: 0;
         }
+        
+        /* Scaled up Logo styling */
+        .quantal-logo {
+            width: 64px;
+            height: 64px;
+            object-fit: contain;
+            filter: drop-shadow(0 0 15px rgba(255,255,255,0.4));
+            transition: transform 0.3s ease;
+        }
 
-        /* Fix for buttons disappearing or being cut */
-        .btn-container {
-            position: relative;
-            z-index: 20;
-            display: inline-block;
+        .quantal-logo:hover {
+            transform: scale(1.05);
         }
     </style>
 </head>
@@ -144,24 +143,48 @@
         <canvas id="mainCanvas"></canvas>
     </div>
 
-    <nav class="fixed top-0 w-full z-[100] nav-glass px-10 py-5 flex justify-between items-center">
-        <div class="flex items-center gap-3">
-            <div class="w-10 h-10 bg-white rounded-xl flex items-center justify-center shadow-lg">
-                <div class="w-5 h-5 bg-black rounded-md"></div>
+    <!-- Navigation Header -->
+    <nav class="fixed top-0 w-full z-[100] nav-glass px-8 py-4 flex justify-between items-center">
+        <!-- Top Left Corner: Logo & Branding -->
+        <div class="flex items-center gap-5">
+            <div class="w-16 h-16 flex items-center justify-center">
+                <!-- Restored & Linked Logo (Raw URL) -->
+                <img src="https://raw.githubusercontent.com/Codemaster-AR/quantal/main/Logos/Quantal.png" 
+                     alt="Quantal Logo" 
+                     class="quantal-logo"
+                     onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
+                <!-- Fallback if image fails -->
+                <div class="hidden w-12 h-12 bg-white rounded-2xl items-center justify-center shadow-lg">
+                    <div class="w-6 h-6 bg-black rounded-lg"></div>
+                </div>
             </div>
-            <span class="font-extrabold tracking-tighter text-xl">QUANTAL</span>
+            <div class="flex flex-col">
+                <span class="font-extrabold tracking-tighter text-2xl leading-none">QUANTAL</span>
+                <span class="text-[8px] font-black tracking-[0.4em] uppercase text-white/30">Intelligence</span>
+            </div>
         </div>
-        <div class="hidden md:flex gap-10 text-[10px] font-black tracking-[0.4em] text-white/40 uppercase">
+
+        <!-- Center: Links -->
+        <div class="hidden md:flex gap-10 text-[9px] font-black tracking-[0.4em] text-white/50 uppercase">
             <a href="#" class="hover:text-white transition-all">Interface</a>
             <a href="#" class="hover:text-white transition-all">Systems</a>
             <a href="#" class="hover:text-white transition-all">Laboratory</a>
         </div>
-        <button class="px-6 py-2.5 bg-white text-black text-[11px] font-black rounded-full hover:scale-105 transition-all uppercase tracking-widest">Connect</button>
+
+        <!-- Right Corner: Actions -->
+        <div class="flex items-center gap-4">
+             <button class="px-6 py-3 bg-white text-black text-[10px] font-black rounded-full hover:scale-105 transition-all uppercase tracking-widest shadow-lg">
+                Connect
+             </button>
+             <div class="w-12 h-12 liquid-glass flex items-center justify-center border border-white/20 hover:border-white/50 transition-all cursor-pointer rounded-2xl">
+                <i class="fas fa-bars text-xs opacity-70"></i>
+             </div>
+        </div>
     </nav>
 
     <main>
         <!-- Hero Section -->
-        <section class="min-h-screen flex flex-col justify-center items-center text-center">
+        <section class="min-h-screen flex flex-col justify-center items-center text-center pt-24">
             <div class="content-wrap" id="hero-parallax">
                 <div class="inline-flex items-center gap-3 px-5 py-2 rounded-full border border-white/10 bg-white/5 text-[9px] font-black tracking-[0.4em] uppercase text-indigo-400 mb-10">
                     <span class="w-2 h-2 rounded-full bg-indigo-400 animate-pulse"></span>
@@ -175,21 +198,17 @@
                     <span class="text-white/70">Pure depth. Zero friction.</span>
                 </p>
                 <div class="flex gap-6 justify-center items-center">
-                    <div class="btn-container">
-                        <button class="px-10 py-5 bg-white text-black rounded-2xl font-black text-xs uppercase tracking-widest hover:shadow-[0_0_30px_rgba(255,255,255,0.3)] transition-all">
-                            Initiate
-                        </button>
-                    </div>
-                    <div class="btn-container">
-                        <button class="px-10 py-5 liquid-glass rounded-2xl font-black text-xs uppercase tracking-widest">
-                            View Specs
-                        </button>
-                    </div>
+                    <button class="px-10 py-5 bg-white text-black rounded-2xl font-black text-xs uppercase tracking-widest hover:shadow-[0_0_30px_rgba(255,255,255,0.3)] transition-all">
+                        Initiate
+                    </button>
+                    <button class="px-10 py-5 liquid-glass rounded-2xl font-black text-xs uppercase tracking-widest border border-white/20">
+                        View Specs
+                    </button>
                 </div>
             </div>
         </section>
 
-        <!-- Widget Section -->
+        <!-- Widgets -->
         <section class="py-40 relative">
             <div class="content-wrap">
                 <div class="grid md:grid-cols-3 gap-10 items-stretch">
@@ -226,7 +245,6 @@
             </div>
         </section>
 
-        <!-- Info Section -->
         <section class="py-40 mb-40">
             <div class="content-wrap">
                 <div class="liquid-glass p-20 flex flex-col lg:flex-row items-center gap-20">
@@ -236,20 +254,9 @@
                         <p class="text-white/50 text-lg leading-relaxed mb-10 font-light">
                             Quantal isn't just a static layout. It's a living environment where every particle and color reacts to your Presence.
                         </p>
-                        <div class="flex gap-6">
-                            <div class="flex flex-col">
-                                <span class="text-3xl font-bold">120<span class="text-sm text-white/30 ml-1">FPS</span></span>
-                                <span class="text-[9px] text-white/20 font-bold uppercase tracking-widest mt-1">Render Speed</span>
-                            </div>
-                            <div class="w-px h-12 bg-white/10"></div>
-                            <div class="flex flex-col">
-                                <span class="text-3xl font-bold">0.8<span class="text-sm text-white/30 ml-1">ms</span></span>
-                                <span class="text-[9px] text-white/20 font-bold uppercase tracking-widest mt-1">Latency</span>
-                            </div>
-                        </div>
                     </div>
-                    <div class="lg:w-1/2 w-full h-[400px] liquid-glass bg-white/[0.02] flex items-center justify-center relative group">
-                        <div class="absolute inset-0 bg-gradient-to-tr from-indigo-500/20 to-transparent opacity-0 group-hover:opacity-100 transition-opacity rounded-[2.5rem]"></div>
+                    <div class="lg:w-1/2 w-full h-[400px] liquid-glass bg-white/[0.02] flex items-center justify-center group overflow-hidden">
+                        <div class="absolute inset-0 bg-gradient-to-tr from-indigo-500/20 to-transparent opacity-0 group-hover:opacity-100 transition-all rounded-[2.5rem]"></div>
                         <div class="text-8xl font-black text-white/5 italic tracking-tighter select-none">TAHOE</div>
                     </div>
                 </div>
@@ -274,13 +281,8 @@
         let mouse = { x: -2000, y: -2000 };
         let scrollY = window.pageYOffset;
 
-        const PARTICLE_COUNT = 150;
-        const MOUSE_RADIUS = 300;
-
         class Particle {
-            constructor() {
-                this.init();
-            }
+            constructor() { this.init(); }
             init() {
                 this.x = Math.random() * canvas.width;
                 this.y = Math.random() * canvas.height;
@@ -288,8 +290,7 @@
                 this.originY = this.y;
                 this.size = Math.random() * 2 + 0.5;
                 this.color = `rgba(255, 255, 255, ${Math.random() * 0.3 + 0.1})`;
-                this.vx = 0;
-                this.vy = 0;
+                this.vx = 0; this.vy = 0;
             }
             update() {
                 const pY = scrollY * 0.15;
@@ -297,22 +298,16 @@
                 const dx = mouse.x - this.x;
                 const dy = mouse.y - actualY;
                 const distance = Math.sqrt(dx * dx + dy * dy);
-                this.vx += (this.originX - this.x) * 0.001;
-                this.vy += (this.originY - this.y) * 0.001;
-                if (distance < MOUSE_RADIUS) {
-                    const force = (MOUSE_RADIUS - distance) / MOUSE_RADIUS;
+                if (distance < 300) {
+                    const force = (300 - distance) / 300;
                     const angle = Math.atan2(dy, dx);
                     this.vx -= Math.cos(angle) * force * 5;
                     this.vy -= Math.sin(angle) * force * 5;
                 }
-                this.vx *= 0.95;
-                this.vy *= 0.95;
-                this.x += this.vx;
-                this.y += this.vy;
-                if (this.x < 0) this.x = canvas.width;
-                if (this.x > canvas.width) this.x = 0;
-                if (this.y < 0) this.y = canvas.height;
-                if (this.y > canvas.height) this.y = 0;
+                this.vx += (this.originX - this.x) * 0.001;
+                this.vy += (this.originY - this.y) * 0.001;
+                this.vx *= 0.95; this.vy *= 0.95;
+                this.x += this.vx; this.y += this.vy;
             }
             draw() {
                 const pY = scrollY * 0.15;
@@ -327,7 +322,7 @@
         function resize() {
             canvas.width = window.innerWidth;
             canvas.height = window.innerHeight;
-            particles = Array.from({ length: PARTICLE_COUNT }, () => new Particle());
+            particles = Array.from({ length: 150 }, () => new Particle());
         }
 
         window.addEventListener('resize', resize);
@@ -340,23 +335,13 @@
             scrollY = window.pageYOffset;
             const hero = document.getElementById('hero-parallax');
             if(hero) {
-                hero.style.transform = `translateY(${scrollY * 0.35}px)`;
-                hero.style.opacity = Math.max(0, 1 - (scrollY / 700));
+                hero.style.transform = `translateY(${scrollY * 0.3}px)`;
+                hero.style.opacity = Math.max(0, 1 - (scrollY / 800));
             }
-            document.getElementById('blob-1').style.transform = `translateY(${scrollY * 0.05}px) rotate(${scrollY * 0.01}deg)`;
-            document.getElementById('blob-2').style.transform = `translateY(${scrollY * -0.1}px) rotate(${scrollY * -0.005}deg)`;
-            document.getElementById('blob-3').style.transform = `translateY(${scrollY * 0.02}px)`;
         });
 
         function animate() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
-            const b1 = document.getElementById('blob-1');
-            const mx = (mouse.x - window.innerWidth/2) * 0.03;
-            const my = (mouse.y - window.innerHeight/2) * 0.03;
-            if(b1) {
-                b1.style.left = `calc(-200px + ${mx}px)`;
-                b1.style.top = `calc(-200px + ${my}px)`;
-            }
             particles.forEach(p => { p.update(); p.draw(); });
             requestAnimationFrame(animate);
         }
